<resources>
    <string name="app_name">CyberGardenHack</string>
    <string name="title_mail">E-mail</string>
    <string name="title_pass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="checkIn">Отметиться</string>
    <string name="input_code_title">Введи или отсканируй код</string>
    <string name="remember_me">Запомнить меня?</string>
    <string name="remove_student">Удалить студента?</string>
    <string name="success">Подтвердить</string>
    <string name="cancel"><u>Отменить</u></string>
</resources>