<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_corners"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/remove_student"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/removeCancel_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/gradBlueEnd"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/removeSuccess_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:background="@color/gradBlueEnd"
            android:gravity="center"
            android:text="@string/success"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>